--- a/css/style.css
+++ b/css/style.css
@@ -289,3 +289,11 @@ h3 {
     display: block !important;
   }
 }
+/*Mobile*/
+/*Mobile*/
+@media (max-width: 400px) {
+	#cssmenu > ul li#responsive-tab {
+		background-position: 85% 180%;
+		padding: 2px 0px 0px 70px;
+}
+}
